# yt-dlp_info-extractor-api

./: .gitignore  Dockerfile  compose.yaml  main.py  pyproject.toml  requirements.in  requirements.txt  start.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: python-app.yml  python-lint.yml
tests/: conftest.py  test_yt_dlp_extraction.py
