[project]
name = "yt-dlp-info-extractor-api"
version = "0.1.0"
description = "youtube-dl (yt-dlp) REST API for extracting info from video links"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",  # Without standard dependencies (https://fastapi.tiangolo.com/#standard-dependencies)
    "uvicorn[standard]>=0.34.2",  # This is the only one among FastAPI's standard dependencies we need
    "yt-dlp[curl-cffi,default]>=2026.3.17",  # Includes necessary and nice-to-have dependencies: https://github.com/yt-dlp/yt-dlp?tab=readme-ov-file#networking
]
